# JANIS-Agentic-Deep-Researcher

./: .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  langgraph.json  models.json  pyproject.toml  test.py
backend/: .uvrc  DENARIO_INTEGRATION.md  DENARIO_SETUP.md  app.py  debug_token_usage.py  denario_agent.py  denario_workflow.py  langgraph.json  main.py  pyproject.toml  test_token_structure.py
backend/agents/: __init__.py  denario_adapter.py  sub_agents.py
backend/config/: __init__.py  langfuse.py  model.py  openlit_setup.py  opentelemetry_tracker.py
backend/deepagents/: __init__.py  graph.py
backend/deepagents/backends/: __init__.py  composite.py  filesystem.py  protocol.py  state.py  store.py  utils.py
backend/deepagents/middleware/: __init__.py  filesystem.py  model_selector_middleware.py  models_state.py  subagents.py  todo_fix.py  token_usage_state.py
backend/prompts/: __init__.py  critique_prompts.py  individual_researcher_prompts.py  literature_review_prompts.py  new_prompt.py  orchestrator_prompts.py  plan_formulation_prompts.py  report_writer_prompts.py  research_agent_prompts.py  research_prompts.py  research_supervisor_prompts.py  results_interpretation_prompts.py  section_writer_prompts.py  section_writing_tips.py
backend/src/lib/denario/: __init__.py  config.py  denario.py  experiment.py  idea.py  llm.py  method.py  research.py  utils.py
backend/src/lib/denario/langgraph_agents/: idea.py  literature.py  parameters.py  reader.py  routers.py
backend/src/lib/denario/paper_agents/: agents_graph.py  dynamic_graph.py  journal.py  latex.py  latex_presets.py  literature.py  outline.py  paper_node.py  parameters.py  prompts.py  reader.py  routers.py  tools.py
backend/src/lib/denario/paper_agents/LaTeX/: AAS_keywords.txt
backend/src/lib/denario/prompts/: experiment.py
backend/src/research_agent/: graph.py
backend/src/research_agent/config/: __init__.py  langfuse.py  langfuse_token_tracker.py  model.py  models.json  openlit_setup.py  opentelemetry_tracker.py  token_tracker.py  token_tracking_setup.py
backend/src/research_agent/prompts/: __init__.py  outline_agent_prompts.py
backend/src/research_agent/tools/: __init__.py  denario_paper_generator.py  json_validator.py  outline_creator.py
backend/tools/: __init__.py  arxiv_search.py  document_aggregator.py  json_validator.py  latex_tool.py  latex_utils.py  research_tools.py  text_counter.py  think_tool.py
backend/utils/: __init__.py  outline_parser.py  outline_storage.py
denario/: cli.py  denario.py  key_manager.py
denario/langgraph_agents/: agents_graph.py  methods.py  pdf_reader.py  prompts.py  reader.py  referee.py
denario/paper_agents/: agents_graph.py  latex.py  literature.py  paper_node.py  parameters.py  prompts.py  reader.py
denario/paper_agents/LaTeX/: JHEP.bst  pasj01.cls
denario/prompts/: idea.py  method.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/local-paper/latex/: route.ts
frontend/src/app/api/local-paper/pdf/: route.ts
frontend/src/app/components/ChatInterface/: ChatInterface.module.scss  ChatInterface.tsx
frontend/src/app/components/ChatMessage/: ChatMessage.module.scss  ChatMessage.tsx
frontend/src/app/components/FileViewDialog/: FileViewDialog.module.scss  FileViewDialog.tsx
frontend/src/app/components/ModelSelector/: ModelSelector.module.scss  ModelSelector.tsx
frontend/src/app/components/PlanOutline/: PlanOutline.module.scss  PlanOutline.tsx
frontend/src/app/components/SubAgentPanel/: SubAgentPanel.tsx
frontend/src/app/components/TasksFilesSidebar/: TasksFilesSidebar.module.scss  TasksFilesSidebar.tsx
frontend/src/app/components/ToolCallBox/: ToolCallBox.module.scss  ToolCallBox.tsx
frontend/src/app/components/ToolCallPanel/: ToolCallPanel.module.scss  ToolCallPanel.tsx
frontend/src/app/hooks/: useChat.ts
frontend/src/app/styles/: _variables.scss  globals.scss
frontend/src/app/types/: types.ts
frontend/src/app/utils/: exportUtils.ts  fileContentUtils.ts  outlineParser.ts
frontend/src/lib/environment/: deployments.ts
python_guidelines/: README.md
python_guidelines/docs/: index.md
python_guidelines/docs/design/: context-managers.md  data-practices.md  dependency-injection.md  flow-control.md  functions-and-srp.md  oop-and-classes.md  performance-and-optimization.md  purity-and-side-effects.md
python_guidelines/docs/errors-logging/: catch-all.md  exceptions.md  logging.md
python_guidelines/docs/principles/: zen-and-production.md
python_guidelines/docs/style/: docstrings.md  formatting-and-linting.md  naming.md  typing.md
python_guidelines/docs/testing/: testing-guidelines.md
python_guidelines/docs/tooling/: toolchain.md  uv-and-pyproject.md
