[project]
name = "janis-agentic-deep-researcher"
version = "0.1.0"
description = "JANIS Agentic Deep Researcher - Research automation system with dynamic paper outline support"
requires-python = ">=3.12"  # Required by cmbagent==0.0.1.post63

dependencies = [
    # LangGraph and LangChain - Using older versions compatible with cmbagent (openai==1.99.9)
    "langgraph>=0.2.0",
    "langgraph-cli[inmem]>=0.4.5",
    "langchain>=0.3.0,<1.0.0",  # Compatible with openai==1.99.9
    "langchain-core>=0.3.74,<1.0.0",  # Compatible with langchain-openai<0.3.33
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0,<0.3.33",  # Compatible with openai==1.99.9
    "langchain-anthropic>=0.2.0",
    
    # OpenAI version required by cmbagent
    "openai==1.99.9",  # Required by cmbagent-autogen==0.0.91.post11
    
    # Denario dependencies
    "pillow>=10.0.0",  # PIL/Image
    "PyMuPDF>=1.24.1",  # For fitz import in paper_node.py
    "cmbagent==0.0.1.post63",  # CMB Agent for planning (requires openai==1.99.9)
    
           # Utilities
           "dotenv>=0.9.9",  # For load_dotenv in main.py (matching old code)
           "json5>=0.9.0",  # JSON5 support
           "pathlib2>=2.3.7; python_version < '3.4'",  # Pathlib for older Python
           "arxiv>=2.1.0",  # arXiv API library for free paper search
    
    # Type hints
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[tool.uv]
# uv can automatically manage virtual environments
resolution = "highest"  # Use highest compatible versions to override cmbagent's openai constraint

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "cmbagent.*",
    "langchain.*",
    "langgraph.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
